--- a/static/css/timetable/timetable.css
+++ b/static/css/timetable/timetable.css
@@ -51,6 +51,7 @@
     padding: 15px;
     padding-top: 0;
     padding-left: 0;
+    padding-bottom: 20vh;
     margin: 0 auto; /* 수평 중앙 정렬 */
     width: 100%;
     height: 64vh;
@@ -160,7 +161,6 @@
       color: #000000;
       text-align: center;
       word-break: keep-all;  /* 어절 단위로 줄바꿈 */
-      overflow-y: auto;
   }
   
 
@@ -362,6 +362,8 @@
     margin: 0 auto; /* 수평 중앙 정렬 */
     width: 35vw;
     height: 60vh;
+    overflow: scroll;
+
   }
   
   .header {
@@ -456,7 +458,6 @@
       color: #000000;
       text-align: center;
       word-break: keep-all;  /* 어절 단위로 줄바꿈 */
-      overflow-y: auto;
   }
 
   
